// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<Fragment>
  <ForwardRef(SvgLogo)
    className=""
    cursor="pointer"
    height={500}
    width={500}
  />
</Fragment>
`;

exports[`Snapshot Testing Required Props 1`] = `
<Fragment>
  <ForwardRef(SvgLogo)
    className=""
  />
</Fragment>
`;
